--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mathlib==0.4.0
 python-toggl==1.0.0
 requests==2.28.1
+TogglPy==0.1.2
 urllib3==1.26.12
 Werkzeug==2.2.2
+XlsxWriter==3.0.3
 zipp==3.8.1
