--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,13 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mathlib==0.4.0
+numpy==1.23.3
+pandas==1.5.0
+python-dateutil==2.8.2
 python-toggl==1.0.0
+pytz==2022.2.1
 requests==2.28.1
+six==1.16.0
 TogglPy==0.1.2
 urllib3==1.26.12
 Werkzeug==2.2.2
